测试新生代的Minor GC